--- a/mmp210/portfolio-page/index.html
+++ b/mmp210/portfolio-page/index.html
@@ -8,6 +8,22 @@
   <title>Welcome</title>
 </head>
 <body class="container">
-  
+<header class="heaher">
+<h1 id="name">Yi Lin</h1>
+<p id="header_p">Coder && Photographer</p>
+<img src="./56242980_826163907749007_6511705131279450112_n.jpeg" alt="Avatar">
+</header>
+<main class="content">
+<p id="main_content_p">
+  Self-motivated Web Developer with a high level of experience working on multiple projects. Adept at working independently as well as collaborating with teams. Fluent in English, Mandarin and Japanese. 
+</p>
+</main>
+<div class="sidebar">
+  <ul>
+    <li><a href="https://www.instagram.com/h1sphoto/" target="_blank">Instagram</a></li>
+    <li><a href="mailto: h11sphoto@gmail.com" target="_blank" >Email</a></li>
+  </ul>
+</div>
+
 </body>
 </html>
