--- a/mmp210/portfolio-page/index.html
+++ b/mmp210/portfolio-page/index.html
@@ -15,7 +15,7 @@
 </header>
 <main class="content">
 <p id="main_content_p">
-  Self-motivated Web Developer with a high level of experience working on multiple projects. Adept at working independently as well as collaborating with teams. Fluent in English, Mandarin and Japanese. 
+  Self-motivated Web Developer with a high level of experience working on multiple projects. Adept at working independently as well as collaborating with teams. Fluent in English, Mandarin, and Japanese.
 </p>
 </main>
 <div class="sidebar">
