--- a/mmp240/ex0/index.html
+++ b/mmp240/ex0/index.html
@@ -15,7 +15,7 @@
   <ul class="nav">
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="mailto: abc@example.com" target="_blank" >Email</a></li>
+    <li><a href="mailto: h11sphoto@gmail.com" target="_blank" >Email</a></li>
   </ul>
 </nav>
 
