--- a/mmp240/ex0/about.html
+++ b/mmp240/ex0/about.html
@@ -15,7 +15,7 @@
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About</a></li>
-  <li><a href="mailto: abc@example.com" target="_blank" >Email</a></li>
+  <li><a href="mailto: h11sphoto@gmail.com" target="_blank" >Email</a></li>
 </ul>
 </nav>
 
