--- a/mmp210/portfolio-page/index.html
+++ b/mmp210/portfolio-page/index.html
@@ -24,6 +24,9 @@
     <li><a href="mailto: h11sphoto@gmail.com" target="_blank" >Email</a></li>
   </ul>
 </div>
+<footer>
+  
+</footer>
 
 </body>
 </html>
