--- a/mmp210/portfolio-page/index.html
+++ b/mmp210/portfolio-page/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles.css">
-  <title>Welcome</title>
-</head>
-<body class="container">
-<header class="heaher">
-<h1 id="name">Yi Lin</h1>
-<p id="header_p">Coder && Photographer</p>
-<img src="./56242980_826163907749007_6511705131279450112_n.jpeg" alt="Avatar">
-</header>
-<main class="content">
-<p id="main_content_p">
-  Self-motivated Web Developer with a high level of experience working on multiple projects. Adept at working independently as well as collaborating with teams. Fluent in English, Mandarin, and Japanese.
-</p>
-</main>
-<div class="sidebar">
-  <ul>
-    <li><a href="https://www.instagram.com/h1sphoto/" target="_blank">Instagram</a></li>
-    <li><a href="mailto: h11sphoto@gmail.com" target="_blank" >Email</a></li>
-  </ul>
-</div>
-<footer>
-  
-</footer>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Welcome</title>
+  </head>
+  <body class="container">
+    <header class="heaher">
+      <h1 id="name">Yi Lin</h1>
+      <p id="header_p">Coder && Photographer</p>
+      <img
+        src="./56242980_826163907749007_6511705131279450112_n.jpeg"
+        alt="Avatar"
+      />
+    </header>
+    <main class="content">
+      <p id="main_content_p">
+        Self-motivated Web Developer with a high level of experience working on
+        multiple projects. Adept at working independently as well as
+        collaborating with teams. Fluent in English, Mandarin, and Japanese.
+      </p>
+    </main>
+    <div class="sidebar">
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/h1sphoto/" target="_blank"
+            >Instagram</a
+          >
+        </li>
+        <li><a href="mailto: h11sphoto@gmail.com" target="_blank">Email</a></li>
+      </ul>
+    </div>
+    <footer></footer>
+  </body>
 </html>
