--- a/mmp240/ex0/index.html
+++ b/mmp240/ex0/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Welcome</title>
-</head>
-<body>
-<header>
-  <h1>Name</h1>
-</header>
-<nav>
-  <ul class="nav">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="mailto: h11sphoto@gmail.com" target="_blank" >Email</a></li>
-  </ul>
-</nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Welcome</title>
+  </head>
+  <body>
+    <header>
+      <h1>Name</h1>
+    </header>
+    <nav>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="mailto: h11sphoto@gmail.com" target="_blank">Email</a></li>
+      </ul>
+    </nav>
 
-<div class="content">
-  <h2>Welcome</h2>
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique veritatis nam, doloremque aliquam totam iusto saepe neque debitis fugit provident voluptatum fugiat quis esse sequi laudantium! Quos tempora sint fugiat. ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis corporis nam quidem eos architecto minima ratione ipsam dolore, itaque, quasi beatae aliquam perspiciatis unde. Velit libero vitae maiores minus ratione.
-  </p>
-</div>
-
-</body>
+    <div class="content">
+      <h2>Welcome</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+        veritatis nam, doloremque aliquam totam iusto saepe neque debitis fugit
+        provident voluptatum fugiat quis esse sequi laudantium! Quos tempora
+        sint fugiat. ipsum dolor sit amet, consectetur adipisicing elit.
+        Blanditiis corporis nam quidem eos architecto minima ratione ipsam
+        dolore, itaque, quasi beatae aliquam perspiciatis unde. Velit libero
+        vitae maiores minus ratione.
+      </p>
+    </div>
+  </body>
 </html>
