--- a/mmp240/craigslist_redesign/housing.html
+++ b/mmp240/craigslist_redesign/housing.html
@@ -24,7 +24,7 @@
       </div>
     </header>
     <hr class="hr1rem hr_top" />
-    <div class="form">
+    <div class="housing form">
       <!-- <button class="search_btn" id="zipcode_search_btn" class="icon">
         <i class="fa fa-search"></i>
       </button> -->
@@ -46,6 +46,16 @@
       <p id="results">1,726 results</p>
     </div> -->
     <br />
+    <hr />
+    <iframe
+      class="housing_map"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.1016604640863!2d-74.00807798255616!3d40.71577850000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a21d0318467%3A0xdaf5a4eb2f5743b5!2s105%20Duane%20St%2C%20New%20York%2C%20NY%2010007!5e0!3m2!1sen!2sus!4v1648191958062!5m2!1sen!2sus"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    >
+    </iframe>
     <hr />
     <section id="houses">
       <ul class="grid">
