--- a/mmp240/craigslist_redesign/housedetail.html
+++ b/mmp240/craigslist_redesign/housedetail.html
@@ -13,7 +13,7 @@
   </head>
   <body class="container">
     <header class="grid">
-      <div>
+      <div class="header_menu_icon">
         <span class="menu"><div class="menu_icon"></div></span>
       </div>
       <div class="housing logo">
@@ -85,13 +85,6 @@
           ut necessitatibus odit dicta est magni in nostrum nemo! Ullam quidem
           officia vero adipisci magni, voluptatem ab perspiciatis. Cum, ratione
           debitis?
-        </p>
-        <br />
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique
-          quibusdam porro tempore quaerat pariatur quis soluta laboriosam
-          perspiciatis eaque repellendus, dolores illum hic explicabo reiciendis
-          repudiandae ipsa tenetur quisquam molestiae.
         </p>
         <br />
         <p>
