--- a/mmp240/craigslist_redesign/housing.html
+++ b/mmp240/craigslist_redesign/housing.html
@@ -13,8 +13,8 @@
   </head>
   <body class="container">
     <header class="grid">
-      <div>
-        <span class="menu"><div class="menu_icon"></div></span>
+      <div class="header_menu_icon">
+        <span class="menu"> <div class="menu_icon"></div></span>
       </div>
       <div class="housing logo">
         <a href="index.html">Craigslist</a>
@@ -58,7 +58,7 @@
     </iframe>
     <hr />
     <section id="houses">
-      <ul class="grid">
+      <ul class="search_results">
         <li>
           <a href="./housedetail.html">
             <img
@@ -69,7 +69,6 @@
             <p>105 Duane St, New York, NY 10007</p>
           </a>
         </li>
-
         <li>
           <a href="./housedetail.html">
             <img
