--- a/mmp240/craigslist_redesign/index.html
+++ b/mmp240/craigslist_redesign/index.html
@@ -18,9 +18,9 @@
       </div>
     </header>
     <div class="form">
-      <button class="search_btn" id="home_search_btn" class="icon">
+      <!-- <button class="search_btn" id="home_search_btn" class="icon">
         <i class="fa fa-search"></i>
-      </button>
+      </button> -->
       <input
         class="input"
         id="home_search_input"
