--- a/mmp240/yilin.us/contact.html
+++ b/mmp240/yilin.us/contact.html
@@ -15,15 +15,15 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <div id="contact-top" class="grid">
+    <div class="grid">
       <div class="contact-img">
-        <img src="assets/panda_contact.jpg" alt="pic of Yi Lin" />
+        <img src="assets/panda_contact.jpg" alt="pic of panda" />
       </div>
     </div>
-    <section id="contact">
-      <h3>Get In Touch</h3>
-      <p class="leading">Lorem ipsum dolor sit amet, consectetur.</p>
+    <section id="contact" class="grid">
       <form>
+        <h3>Get In Touch</h3>
+        <p class="leading">Lorem ipsum dolor sit amet, consectetur.</p>
         <input type="text" placeholder="NAME" />
         <input type="email" placeholder="EMAIL" />
         <textarea placeholder="YOUR MESSAGE"></textarea>
@@ -49,6 +49,7 @@
           <script>
             document.write(new Date().getFullYear());
           </script>
+          <br />
           Yi Lin All Rights Reserved
         </p>
       </div>
