--- a/mmp240/yilin.us/index.html
+++ b/mmp240/yilin.us/index.html
@@ -19,15 +19,17 @@
       <div class="welcome-text">
         <h2>Photographer<br />& Full Stack Developer</h2>
         <p class="leading">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
-          consequat.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+          impedit culpa id sit ex natus tempore possimus debitis ullam amet
+          nesciunt vero voluptatum laboriosam ratione provident, facere deleniti
+          vel! Ratione.
         </p>
         <a target="_blank" href="./contact.html" class="button"
           >Contact Me Now</a
         >
       </div>
       <div class="welcome-img">
-        <img src="assets/selfie.jpg" alt="pic of Yi Lin" />
+        <img src="assets/selfie.jpg" alt="pic ofa Yi Lin" />
       </div>
     </section>
     <section id="portfolio">
