--- a/mmp240/yilin.us/index.html
+++ b/mmp240/yilin.us/index.html
@@ -37,7 +37,7 @@
       <div class="projects grid">
         <a href="#">
           <img src="assets/project_1.png" alt="Brain" />
-          <h4>Generative Art</h4>
+          <h4>Art</h4>
         </a>
         <a href="#">
           <img src="assets/project_2.jpg" alt="Branding" />
